# src/main/java/com/azatkhaliullin/mapper/ServerInfoMapper.java
@@ -1,0 +1,11 @@
+package com.azatkhaliullin.mapper;
+
+import com.azatkhaliullin.domain.ServerInfo;
+import com.azatkhaliullin.dto.ServerInfoDto;
+import org.mapstruct.Mapper;
+
+@Mapper(componentModel = "spring")
+public interface ServerInfoMapper {
+
+    ServerInfoDto toDto(ServerInfo serverInfo);
+}
